--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -66,8 +66,7 @@ jobs:
               process.exit(1);
             }
 
-            // Connect to a real browser instance using puppeteer-real-browser.
-            // '--disable-popup-blocking' ensures pop-ups are not blocked.
+            // Connect to a real browser instance with the necessary flags.
             const { browser, page } = await connect({
               headless: true,
               args: [
@@ -118,168 +117,156 @@ jobs:
               await page.screenshot({ path: path.join(screenshotsDir, "step5_logged_in.png"), fullPage: true });
               console.log("Login successful.");
 
-              // NEW STEP: End All Sessions
+              // NEW STEP: End all sessions.
               console.log("Ending all sessions by clicking 'End All Sessions' button...");
               await page.waitForSelector('#endAll', { visible: true, timeout: 30000 });
               await page.click('#endAll');
               await page.screenshot({ path: path.join(screenshotsDir, "step5_end_all_sessions.png"), fullPage: true });
               console.log("All sessions ended.");
 
-              // STEP 6: Launch the client.
-              console.log("Clicking the Launch Client button...");
-              await page.waitForSelector("a.open-client", { visible: true, timeout: 30000 });
-              
-              const newPagePromise = new Promise(resolve => {
-                browser.once('targetcreated', async target => {
-                  if (target.type() === 'page') {
-                    console.log("New target of type 'page' detected. Retrieving client page...");
-                    const newPage = await target.page();
-                    console.log("Client page successfully retrieved.");
-                    resolve(newPage);
-                  }
+              // LOOP: Launch the client 3 times.
+              for (let i = 1; i <= 3; i++) {
+                console.log(`Launching client iteration ${i}...`);
+                // STEP 6: Launch the client.
+                console.log(`Iteration ${i}: Clicking the Launch Client button...`);
+                await page.waitForSelector("a.open-client", { visible: true, timeout: 30000 });
+                
+                const newPagePromise = new Promise(resolve => {
+                  browser.once('targetcreated', async target => {
+                    if (target.type() === 'page') {
+                      console.log(`Iteration ${i}: New target of type 'page' detected. Retrieving client page...`);
+                      const newPage = await target.page();
+                      console.log(`Iteration ${i}: Client page successfully retrieved.`);
+                      resolve(newPage);
+                    }
+                  });
                 });
-              });
+                await page.click("a.open-client");
+                console.log(`Iteration ${i}: Launch Client button clicked. Waiting for client page to open...`);
 
-              await page.click("a.open-client");
-              console.log("Launch Client button clicked. Waiting for client page to open...");
+                const clientPage = await newPagePromise;
+                console.log(`Iteration ${i}: Client page opened.`);
 
-              const clientPage = await newPagePromise;
-              console.log("Client page opened.");
+                // Attempt a brief wait for navigation (5s).
+                console.log(`Iteration ${i}: Checking for navigation event on the client page for 5 seconds...`);
+                try {
+                  await clientPage.waitForNavigation({ waitUntil: "domcontentloaded", timeout: 5000 });
+                  console.log(`Iteration ${i}: Navigation event detected on the client page.`);
+                } catch (e) {
+                  console.warn(`Iteration ${i}: No navigation event detected on the client page. Proceeding with a 5-second delay.`);
+                }
+                console.log(`Iteration ${i}: Starting a fixed 5-second delay...`);
+                await new Promise(resolve => setTimeout(resolve, 5000));
+                console.log(`Iteration ${i}: Delay completed.`);
+                await clientPage.screenshot({ path: path.join(screenshotsDir, `step6_client_opened_${i}.png`), fullPage: true });
+                console.log(`Iteration ${i}: Client page screenshot captured.`);
 
-              // Attempt a brief wait for navigation (5s).
-              console.log("Checking for navigation event on the client page for 5 seconds...");
-              try {
-                await clientPage.waitForNavigation({ waitUntil: "domcontentloaded", timeout: 5000 });
-                console.log("Navigation event detected on the client page.");
-              } catch (e) {
-                console.warn("No navigation event detected on the client page. Proceeding with a 5-second delay.");
-              }
-
-              console.log("Starting a fixed 5-second delay...");
-              await new Promise(resolve => setTimeout(resolve, 5000));
-              console.log("Delay completed.");
-
-              await clientPage.screenshot({ path: path.join(screenshotsDir, "step6_client_opened.png"), fullPage: true });
-              console.log("Client page screenshot captured.");
-
-              // STEP 7: Unmaximize the client window and click the Start button.
-              console.log("[DEBUG] Attempting to unmaximize the client window...");
-
-              // 7a) Log current viewport from inside the page.
-              let dimsBefore = await clientPage.evaluate(() => ({
-                w: window.innerWidth, 
-                h: window.innerHeight
-              }));
-              console.log(`[DEBUG] Current window.innerWidth=${dimsBefore.w}, window.innerHeight=${dimsBefore.h} (before resizing).`);
-
-              // Override screen.availWidth so that the fullscreen check fails.
-              console.log("[DEBUG] Overriding window.screen.availWidth to 1920...");
-              await clientPage.evaluate(() => {
-                Object.defineProperty(window.screen, 'availWidth', {
-                  get: () => 1920,
-                  configurable: true
+                // STEP 7: Unmaximize the client window and click the Start button.
+                console.log(`Iteration ${i}: [DEBUG] Attempting to unmaximize the client window...`);
+                let dimsBefore = await clientPage.evaluate(() => ({
+                  w: window.innerWidth, 
+                  h: window.innerHeight
+                }));
+                console.log(`[DEBUG] Iteration ${i}: Current window.innerWidth=${dimsBefore.w}, window.innerHeight=${dimsBefore.h} (before resizing).`);
+                
+                console.log(`[DEBUG] Iteration ${i}: Overriding window.screen.availWidth to 1920...`);
+                await clientPage.evaluate(() => {
+                  Object.defineProperty(window.screen, 'availWidth', {
+                    get: () => 1920,
+                    configurable: true
+                  });
+                  window.dispatchEvent(new Event('resize'));
                 });
-                window.dispatchEvent(new Event('resize'));
-              });
+                
+                const UNMAX_WIDTH = 800;
+                const UNMAX_HEIGHT = 600;
+                console.log(`[DEBUG] Iteration ${i}: Setting viewport to ${UNMAX_WIDTH}x${UNMAX_HEIGHT}...`);
+                await clientPage.setViewport({ width: UNMAX_WIDTH, height: UNMAX_HEIGHT });
+                
+                console.log(`[DEBUG] Iteration ${i}: Calling window.resizeTo in page context and dispatching resize event...`);
+                await clientPage.evaluate((w, h) => {
+                  window.resizeTo(w, h);
+                  window.dispatchEvent(new Event('resize'));
+                }, UNMAX_WIDTH, UNMAX_HEIGHT);
+                
+                await new Promise(resolve => setTimeout(resolve, 3000));
+                let dimsAfter = await clientPage.evaluate(() => ({
+                  w: window.innerWidth, 
+                  h: window.innerHeight
+                }));
+                console.log(`[DEBUG] Iteration ${i}: After resizing, window.innerWidth=${dimsAfter.w}, window.innerHeight=${dimsAfter.h}.`);
+                
+                const bodyText = await clientPage.evaluate(() => document.body.innerText || "");
+                if (bodyText.includes("Please unmaximize the client window")) {
+                  console.warn(`[DEBUG] Iteration ${i}: The 'unmaximize window' error text is still present in the page.`);
+                  console.warn(`[DEBUG] Iteration ${i}: Error snippet:`, bodyText.substr(bodyText.indexOf("Please unmaximize"), 200));
+                  const errorHtml = await clientPage.content();
+                  fs.writeFileSync(path.join(screenshotsDir, `step7_unmaximized_error_${i}.html`), errorHtml);
+                  console.warn(`[DEBUG] Iteration ${i}: Saved HTML content for unmaximize error to step7_unmaximized_error_${i}.html.`);
+                } else {
+                  console.log(`[DEBUG] Iteration ${i}: The 'unmaximize window' error text was not found in the document body.`);
+                }
+                await clientPage.screenshot({ path: path.join(screenshotsDir, `step7_unmaximized_${i}.png`), fullPage: true });
+                console.log(`[DEBUG] Iteration ${i}: Screenshot taken after unmaximize attempt.`);
 
-              // 7b) Set viewport to a smaller size and call window.resizeTo.
-              const UNMAX_WIDTH = 800;
-              const UNMAX_HEIGHT = 600;
-              console.log(`[DEBUG] Setting viewport to ${UNMAX_WIDTH}x${UNMAX_HEIGHT}...`);
-              await clientPage.setViewport({ width: UNMAX_WIDTH, height: UNMAX_HEIGHT });
+                console.log(`Iteration ${i}: Waiting for the Start button to be visible...`);
+                await clientPage.waitForSelector('#startBtn', { visible: true, timeout: 30000 });
+                console.log(`Iteration ${i}: Clicking the Start button...`);
+                await clientPage.click('#startBtn');
+                await clientPage.screenshot({ path: path.join(screenshotsDir, `step7_after_start_click_${i}.png`), fullPage: true });
+                console.log(`Iteration ${i}: Start button clicked.`);
 
-              console.log("[DEBUG] Calling window.resizeTo in page context and dispatching resize event...");
-              await clientPage.evaluate((w, h) => {
-                window.resizeTo(w, h);
-                window.dispatchEvent(new Event('resize'));
-              }, UNMAX_WIDTH, UNMAX_HEIGHT);
-
-              // Wait for the page to adjust.
-              await new Promise(resolve => setTimeout(resolve, 3000));
-
-              // 7c) Log new viewport dimensions.
-              let dimsAfter = await clientPage.evaluate(() => ({
-                w: window.innerWidth, 
-                h: window.innerHeight
-              }));
-              console.log(`[DEBUG] After resizing, window.innerWidth=${dimsAfter.w}, window.innerHeight=${dimsAfter.h}.`);
-
-              // 7d) Check whether the "unmaximize window" error is still present.
-              const bodyText = await clientPage.evaluate(() => document.body.innerText || "");
-              if (bodyText.includes("Please unmaximize the client window")) {
-                console.warn("[DEBUG] The 'unmaximize window' error text is still present in the page.");
-                console.warn("[DEBUG] Error snippet:", bodyText.substr(bodyText.indexOf("Please unmaximize"), 200));
-                const errorHtml = await clientPage.content();
-                fs.writeFileSync(path.join(screenshotsDir, "step7_unmaximized_error.html"), errorHtml);
-                console.warn("[DEBUG] Saved HTML content for unmaximize error to step7_unmaximized_error.html.");
-              } else {
-                console.log("[DEBUG] The 'unmaximize window' error text was not found in the document body.");
-              }
-              
-              // Take a screenshot after unmaximize.
-              await clientPage.screenshot({ path: path.join(screenshotsDir, "step7_unmaximized.png"), fullPage: true });
-              console.log("[DEBUG] Screenshot taken after unmaximize attempt.");
-
-              console.log("Waiting for the Start button to be visible...");
-              await clientPage.waitForSelector('#startBtn', { visible: true, timeout: 30000 });
-              console.log("Clicking the Start button...");
-              await clientPage.click('#startBtn');
-              await clientPage.screenshot({ path: path.join(screenshotsDir, "step7_after_start_click.png"), fullPage: true });
-              console.log("Start button clicked.");
-
-              // STEP 8: Check for a new window after Start and wait 60 seconds.
-              console.log("Waiting 15 seconds to see if a new window opens after Start...");
-              const newWindowPromise = new Promise(resolve => {
-                let newWindowDetected = false;
-                const checkStart = Date.now();
-                const maxCheckTime = 15000; // check for 15 seconds
-
-                const listener = async target => {
-                  if (target.type() === 'page') {
-                    newWindowDetected = true;
-                    console.log("New window opened after Start. Waiting 5 seconds for it to adjust...");
-                    const popupPage = await target.page();
-                    await new Promise(resolve => setTimeout(resolve, 5000));
-                    const dims = await popupPage.evaluate(() => ({ width: window.innerWidth, height: window.innerHeight }));
-                    console.log("Popup window dimensions:", dims);
-                    if (dims.width === 0) {
-                      console.warn("Popup width is 0. Forcing viewport to 800x600...");
-                      await popupPage.setViewport({ width: 800, height: 600 });
+                // STEP 8: Check for a new window after Start and wait 60 seconds.
+                console.log(`Iteration ${i}: Waiting 15 seconds to see if a new window opens after Start...`);
+                const newWindowPromise2 = new Promise(resolve => {
+                  let newWindowDetected = false;
+                  const checkStart = Date.now();
+                  const maxCheckTime = 15000; // check for 15 seconds
+                  const listener = async target => {
+                    if (target.type() === 'page') {
+                      newWindowDetected = true;
+                      console.log(`Iteration ${i}: New window opened after Start. Waiting 5 seconds for it to adjust...`);
+                      const popupPage = await target.page();
+                      await new Promise(resolve => setTimeout(resolve, 5000));
+                      const dims = await popupPage.evaluate(() => ({ width: window.innerWidth, height: window.innerHeight }));
+                      console.log(`Iteration ${i}: Popup window dimensions:`, dims);
+                      if (dims.width === 0) {
+                        console.warn(`Iteration ${i}: Popup width is 0. Forcing viewport to 800x600...`);
+                        await popupPage.setViewport({ width: 800, height: 600 });
+                      }
+                      console.log(`Iteration ${i}: Taking screenshot of popup window...`);
+                      await popupPage.screenshot({ path: path.join(screenshotsDir, `step8_new_window_after_start_${i}.png`), fullPage: true });
+                      if (typeof browser.removeListener === 'function') {
+                        browser.removeListener('targetcreated', listener);
+                      } else if (typeof browser.off === 'function') {
+                        browser.off('targetcreated', listener);
+                      }
+                      resolve();
                     }
-                    console.log("Taking screenshot of popup window...");
-                    await popupPage.screenshot({ path: path.join(screenshotsDir, "step8_new_window_after_start.png"), fullPage: true });
-                    if (typeof browser.removeListener === 'function') {
-                      browser.removeListener('targetcreated', listener);
-                    } else if (typeof browser.off === 'function') {
-                      browser.off('targetcreated', listener);
+                  };
+                  browser.on('targetcreated', listener);
+                  const interval = setInterval(() => {
+                    if (Date.now() - checkStart >= maxCheckTime) {
+                      clearInterval(interval);
+                      if (typeof browser.removeListener === 'function') {
+                        browser.removeListener('targetcreated', listener);
+                      } else if (typeof browser.off === 'function') {
+                        browser.off('targetcreated', listener);
+                      }
+                      if (!newWindowDetected) {
+                        console.log(`Iteration ${i}: No new window was detected within 15 seconds after Start.`);
+                      }
+                      resolve();
                     }
-                    resolve();
-                  }
-                };
+                  }, 500);
+                });
+                await newWindowPromise2;
 
-                browser.on('targetcreated', listener);
-
-                const interval = setInterval(() => {
-                  if (Date.now() - checkStart >= maxCheckTime) {
-                    clearInterval(interval);
-                    if (typeof browser.removeListener === 'function') {
-                      browser.removeListener('targetcreated', listener);
-                    } else if (typeof browser.off === 'function') {
-                      browser.off('targetcreated', listener);
-                    }
-                    if (!newWindowDetected) {
-                      console.log("No new window was detected within 15 seconds after Start.");
-                    }
-                    resolve();
-                  }
-                }, 500);
-              });
-              await newWindowPromise;
-
-              console.log("Waiting 60 seconds after Start for any progress or changes...");
-              await new Promise(resolve => setTimeout(resolve, 60000));
-              await clientPage.screenshot({ path: path.join(screenshotsDir, "step8_after_60secs.png"), fullPage: true });
-              console.log("60-second wait completed. Final screenshot captured.");
+                console.log(`Iteration ${i}: Waiting 60 seconds after Start for any progress or changes...`);
+                await new Promise(resolve => setTimeout(resolve, 60000));
+                await clientPage.screenshot({ path: path.join(screenshotsDir, `step8_after_60secs_${i}.png`), fullPage: true });
+                console.log(`Iteration ${i}: 60-second wait completed. Final screenshot captured for iteration ${i}.`);
+              } // End loop
 
             } catch (error) {
               console.error("An error occurred during the process:", error.message);
