--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -2,7 +2,7 @@ name: YTMonster Login and Launch Client Workflow
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Run every 15 minutes
+    - cron: '0 */6 * * *'  # Run every 6 hours
   workflow_dispatch:
 
 jobs:
@@ -268,7 +268,7 @@ jobs:
                 console.log(`Iteration ${i}: 60-second wait completed. Final screenshot captured for iteration ${i}.`);
               } // End loop
               console.log("Extra watch time started.");
-              await new Promise(resolve => setTimeout(resolve, 6000000));
+              await new Promise(resolve => setTimeout(resolve, 21600000));
               
             } catch (error) {
               console.error("An error occurred during the process:", error.message);
