--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -46,6 +46,8 @@ jobs:
       - name: Create YTMonster Login and Launch Script
         run: |
           echo "Generating login and launch client script..."
+          # --- (The Node.js script content remains the same as in your original request) ---
+          # --- (Make sure the entire 'cat > scripts/ytmonster-login.js << EOL ... EOL' block is here) ---
           cat > scripts/ytmonster-login.js << 'EOL'
           const { connect } = require('puppeteer-real-browser');
           const fs = require('fs');
@@ -268,33 +270,106 @@ jobs:
                 console.log(`Iteration ${i}: 60-second wait completed. Final screenshot captured for iteration ${i}.`);
               } // End loop
               console.log("Extra watch time started.");
-              await new Promise(resolve => setTimeout(resolve, 21600000));
+              await new Promise(resolve => setTimeout(resolve, 21600000)); 
               
             } catch (error) {
               console.error("An error occurred during the process:", error.message);
+              console.error("Full error stack:", error.stack); // Log the full stack trace
               try {
-                const errorHtml = await page.content();
-                fs.writeFileSync(path.join(screenshotsDir, "error_page.html"), errorHtml);
-                await page.screenshot({ path: path.join(screenshotsDir, "error.png"), fullPage: true });
-                console.error("[DEBUG] Saved error HTML to error_page.html.");
-              } catch (_) {}
-              process.exit(1);
+                // Attempt to save state even on error
+                if (page && !page.isClosed()) {
+                    const errorHtml = await page.content();
+                    fs.writeFileSync(path.join(screenshotsDir, "error_page.html"), errorHtml);
+                    await page.screenshot({ path: path.join(screenshotsDir, "error.png"), fullPage: true });
+                    console.error("[DEBUG] Saved error HTML to error_page.html.");
+                } else {
+                   console.error("[DEBUG] Page was closed or unavailable, cannot save error HTML/screenshot.");
+                }
+              } catch (saveError) {
+                 console.error("[DEBUG] Could not save error state:", saveError.message);
+              }
+              // Re-throw the error to ensure the script exits with a non-zero code
+              throw error; 
             } finally {
-              await browser.close();
+               if (browser) {
+                  console.log("Closing browser...");
+                  await browser.close();
+                  console.log("Browser closed.");
+               } else {
+                  console.log("Browser variable not defined or already closed.");
+               }
             }
           })();
           EOL
 
-      - name: Run YTMonster Login and Launch Script
+      # MODIFIED STEP: Run script with retry logic
+      - name: Run YTMonster Login and Launch Script with Retry
+        id: run_script
         run: |
-          echo "Running YTMonster login and launch client script..."
-          node scripts/ytmonster-login.js | tee script_output.log
+          MAX_RETRIES=3 # Max attempts (1 initial + 2 retries)
+          RETRY_COUNT=0
+          SUCCESS=false
+          # The specific error message string to check for
+          SPECIFIC_ERROR_MSG="Cannot take screenshot with 0 width"
+
+          # Clear previous log if it exists, to avoid false positives on retry
+          rm -f script_output.log
+
+          while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
+            echo "--- Starting Attempt $((RETRY_COUNT + 1)) of $MAX_RETRIES ---"
+
+            # Run the script. Redirect stderr to stdout (2>&1) so both are captured by tee.
+            # Pipe to tee to save to file AND show on console.
+            node scripts/ytmonster-login.js 2>&1 | tee script_output.log
+            EXIT_CODE=${PIPESTATUS[0]} # Capture the exit code of the node command, not tee
+
+            if [ $EXIT_CODE -eq 0 ]; then
+              echo "--- Script completed successfully on attempt $((RETRY_COUNT + 1)) ---"
+              SUCCESS=true
+              break # Exit the loop on success
+            fi
+
+            # Script failed, check the reason
+            echo "--- Script failed on attempt $((RETRY_COUNT + 1)) with exit code $EXIT_CODE ---"
+            # Check if the specific error message exists in the log file
+            # Using grep -Fq for fixed string matching and quiet output
+            if grep -Fq "$SPECIFIC_ERROR_MSG" script_output.log; then
+              echo "Detected specific screenshot error: '$SPECIFIC_ERROR_MSG'."
+              RETRY_COUNT=$((RETRY_COUNT + 1))
+              if [ $RETRY_COUNT -lt $MAX_RETRIES ]; then
+                 echo "Retrying after a delay..."
+                 # Optional: Add a delay before retrying
+                 sleep 30 # Wait 30 seconds before next attempt
+                 # Clear screenshots from failed attempt to avoid confusion? Or keep them? Keeping for now.
+                 # rm -rf screenshots/*
+                 # Clear the log for the next attempt
+                 rm -f script_output.log
+              else
+                 echo "Maximum retry limit ($MAX_RETRIES) reached for the specific error."
+              fi
+            else
+              echo "Script failed with an unspecified error (or error message not found in log)."
+              echo "Not retrying this error."
+              break # Exit loop on unspecified error
+            fi
+          done
+
+          # After the loop, check if it succeeded or failed definitively
+          if [ "$SUCCESS" = false ]; then
+            echo "*** Workflow Step Failed: Script did not complete successfully after all attempts. ***"
+            # Ensure the workflow step is marked as failed
+            exit 1
+          fi
 
       - name: Upload Debug Artifacts
-        if: always()
+        if: always() # Always run this to upload logs/screenshots regardless of success/failure
         uses: actions/upload-artifact@v4
         with:
-          name: ytmonster-debug-artifacts
+          name: ytmonster-debug-artifacts-${{ github.run_id }}-${{ github.run_attempt }} # Add run ID and attempt for uniqueness
           path: |
             screenshots/
             script_output.log
+            # Include any error HTML saved by the script
+            screenshots/error_page.html
+            screenshots/error.png
+          retention-days: 7 # Optional: Keep artifacts for 7 days
